# telegram-bot

./: .flake8  @new_tgb_bot.session  Dockerfile  Makefile  anon.session  atesttokenfortgb.session  bot_session.session  docker-compose.yml  entrypoint.sh  install-mmq.sh  notes  sampleWorkerConfig.json  steps  tast  temp.json  testApi.json
code/telegram-bot/: pyproject.toml
tgb_bot/: .env  .flake8  .pylintrc  celerybeat-schedule  pyproject.toml
tgb_bot/src/: app.py
tgb_bot/src/instance/: tgb.db  tgb.db.sqlite
tgb_bot/src/tgb_bot/: __init__.py  auth.py  bot_task_routes.py  bot_tasks.py  bot_utils.py  celery_app.py  envVars.py  http_exceptions.py  init_admin_user.py  models.py  nicelogger.py  test_asyncio.py  testgensession.py  utils.py  views.py
tgb_bot/src/tgb_bot/live_bot/: code_send.py  live_listen_bot.py  live_listen_user.py
tgb_bot/src/tgb_bot/static/css/: bootstrap.min.css  codeOverlay.min.css  styles.min.css  workerOverlay.min.css
tgb_bot/src/tgb_bot/static/js/: client.js  connections.js  rules.js  toast.html  workers.js
tgb_bot/src/tgb_bot/templates/: 404.html  base.html  connections.html  flashed.html  login.html  rules.html  temp.html  workers.html
