[tool.poetry]
name = "tgb-bot"
version = "0.1.0"
description = ""
authors = ["Ridha BOUAZIZI <57324098+ridha-bouazizi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tgb_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"
sqlalchemy = "^2.0.19"
datetime = "^5.2"
pylint = "^2.17.4"
celery = "^5.3.1"
redis = "^4.6.0"
gunicorn = "^21.2.0"
psutil = "^5.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
