[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Ridha BOUAZIZI <57324098+ridha-bouazizi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "3.8.10"
tomli = { version = "^2.0.1", python = "<3.11" }
pathlib2 = { version = "^2.2", python = "^3.2" }
streamlit = "^1.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
